# rigs-of-rods

./: .gitignore  .travis.yml  BUILDING.md  CMakeLists.txt  Doxyfile.conf  build.sh  conanfile.py  conanfile.txt  doxy-config  org.rigsofrods.RigsOfRods.yml  renovate.json  sonar-project.properties
.github/workflows/: build-flatpak.yml  build-game.yml  build-release.yml  coverity-scan.yml  linux-native.yml  no-pch.yml  ror-deps.yml  sonarcloud.yml
cmake/: DependenciesConfig.cmake  DependenciesFunctions.cmake  FindModioSDK.cmake  FixupBundle.cmake  Transifex.cmake  discord_game_sdk.cmake
doc/: CMakeLists.txt  aircraft-handling.tex  beginers-guide.tex  controls-config.tex  installing-content.tex  manual.tex  ror-manual.kilepr
doc/doxygen/: Doxyfile.conf.in  MainPage.md  building on linux.md  building on windows.md
resources/meshes/: 40mrunway.odef  road-slab.odef  road-slab1.odef  road-slab2.odef  road-slab5.odef  road-street.odef  road-taxiway.odef  road-tee.odef  road-turn.odef  road.odef  roadborderboth.odef  roadborderleft.odef  roadborderright.odef  roadbridge.odef  roadquay.odef
resources/ogrewater/: OWAirBubbles.particle  OWCaustics.hlsl  OWCaustics.material  OWCaustics.program  OWDepth.hlsl  OWDepth.material  OWDepth.program  OWFog.hlsl  OWFog.material  OWFog.program  OWPPEffect.hlsl  OWPPFog.compositor  OWPPFog.hlsl  OWPPFog.material  OWPPFog.program  OWPPHorizontalBlur.hlsl  OWPPHorizontalBlur.material  OWPPHorizontalBlur.program  OWPPVerticalBlur.hlsl  OWPPVerticalBlur.material  OWPPVerticalBlur.program  OWWater.hlsl  OWWater.material  OWWater.program  OWWaterDust.material  OWWaterDust.particle  OWWaterDustDepth.hlsl  OWWaterDustDepth.material  WaterNormal1.tga  (+1 more)
source/: CMakeLists.txt
(+99 files in other folders)
